--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Cotton manufacture -- United States'
 - !lcc 'HD'
+- GITenberg
 title: 'The Fabric of Civilization
 
   A Short Survey of the Cotton Industry in the United States'
